--- a/tsconfig.json
+++ b/tsconfig.json
@@ -67,5 +67,5 @@
     "forceConsistentCasingInFileNames": true /* Disallow inconsistently-cased references to the same file. */
   },
   "include": ["src", "__tests__"],
-  "exclude": ["node_modules", "**/__tests__/*", "/demo/**"]
+  "exclude": ["node_modules", "**/__tests__/*"]
 }
