--- a/package.json
+++ b/package.json
@@ -3,15 +3,18 @@
   "version": "0.1.0",
   "description": "React hooks and utilities for using Suspense with existing APIs",
   "main": "lib/index.js",
+  "module": "esm/index.js",
   "types": "lib/index.d.ts",
   "scripts": {
-    "build": "tsc",
+    "build": "npm run build:cjs && npm run build:esm && npm run build:umd",
+    "build:cjs": "tsc -p tsconfig.cjs.json",
+    "build:esm": "tsc -p tsconfig.esm.json",
+    "build:umd": "webpack",
     "format": "prettier --write \"src/**/*.(js|ts)\"",
     "lint": "eslint src --ext .js,.ts",
     "lint:fix": "eslint src --fix --ext .js,.ts",
     "test": "jest --config jest.config.js",
-    "prepare": "npm run build",
-    "prepublishOnly": "npm test && npm run lint",
+    "prepublishOnly": "npm test && npm run lint && npm run build",
     "preversion": "npm run lint",
     "version": "npm run format && git add -A src",
     "postversion": "git push && git push --tags"
@@ -39,6 +42,7 @@
     "@testing-library/react": "^11.2.5",
     "@types/jest": "^26.0.15",
     "@types/react": "^17.0.2",
+    "@types/react-dom": "^17.0.1",
     "@typescript-eslint/eslint-plugin": "^4.5.0",
     "@typescript-eslint/parser": "^4.5.0",
     "eslint": "^7.17.0",
@@ -51,10 +55,15 @@
     "prettier-plugin-organize-imports": "^1.1.1",
     "react": "^17.0.0",
     "ts-jest": "^26.4.1",
-    "typescript": "^4.0.3"
+    "ts-loader": "^6.0.4",
+    "typescript": "^4.0.3",
+    "webpack": "^4.39.3",
+    "webpack-cli": "^3.3.7"
   },
   "files": [
-    "lib/**/*"
+    "lib",
+    "esm",
+    "umd"
   ],
   "dependencies": {
     "is-promise": "^4.0.0"
