Port to using TSDX for build

--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,8 @@
 lib/
 esm/
 umd/
+dist/
+.parcel-cache/
 
 .DS_Store
 
@@ -79,18 +81,10 @@ typings/
 .env
 .env.test
 
-# parcel-bundler cache (https://parceljs.org/)
+# caches
 .cache
-
-# Next.js build output
-.next
-
-# Nuxt.js build / generate output
-.nuxt
-dist
-
-# Gatsby files
 .cache/
+
 # Comment in the public line in if your project uses Gatsby and *not* Next.js
 # https://nextjs.org/blog/next-9-1#public-directory-support
 # public
