--- a/package.json
+++ b/package.json
@@ -2,26 +2,17 @@
   "name": "suspension",
   "version": "0.1.0",
   "description": "React hooks and utilities for using Suspense with existing APIs",
-  "main": "lib/index.js",
-  "module": "esm/index.js",
-  "types": "lib/index.d.ts",
-  "exports": {
-    "require": "./lib/index.js",
-    "import": "./esm/index.js"
-  },
+  "main": "dist/index.js",
+  "module": "dist/suspension.esm.js",
+  "typings": "dist/index.d.ts",
   "scripts": {
-    "build": "npm run build:cjs && npm run build:umd",
-    "build:cjs": "tsc -p tsconfig.cjs.json",
-    "build:esm": "tsc -p tsconfig.esm.json",
-    "build:umd": "webpack",
-    "format": "prettier --write \"src/**/*.(js|ts|jsx|tsx)\"",
-    "lint": "eslint src --ext .js,.ts,.jsx,.tsx",
-    "lint:fix": "eslint src --fix --ext .js,.ts,.jsx,.tsx",
-    "test": "jest --config jest.config.js",
-    "prepublishOnly": "npm test && npm run lint && npm run build",
-    "preversion": "npm run lint",
-    "version": "npm run format && git add -A src",
-    "postversion": "git push && git push --tags"
+    "start": "tsdx watch",
+    "build": "tsdx build",
+    "test": "tsdx test --passWithNoTests",
+    "lint": "tsdx lint",
+    "prepare": "tsdx build",
+    "size": "size-limit",
+    "analyze": "size-limit --why"
   },
   "repository": {
     "type": "git",
@@ -45,34 +36,41 @@
   "peerDependencies": {
     "react": ">=16.13.0"
   },
+  "engines": {
+    "node": ">=10"
+  },
+  "size-limit": [
+    {
+      "path": "dist/suspension.cjs.production.min.js",
+      "limit": "10 KB"
+    },
+    {
+      "path": "dist/suspension.esm.js",
+      "limit": "10 KB"
+    }
+  ],
+  "files": [
+    "dist",
+    "src"
+  ],
+  "husky": {
+    "hooks": {
+      "pre-commit": "tsdx lint"
+    }
+  },
   "devDependencies": {
+    "@size-limit/preset-small-lib": "^4.10.0",
     "@testing-library/react": "^11.2.5",
-    "@types/jest": "^26.0.15",
     "@types/react": "^17.0.2",
     "@types/react-dom": "^17.0.1",
-    "@typescript-eslint/eslint-plugin": "^4.5.0",
-    "@typescript-eslint/parser": "^4.5.0",
-    "eslint": "^7.17.0",
-    "eslint-config-airbnb-typescript": "^12.0.0",
-    "eslint-config-prettier": "^8.1.0",
-    "eslint-plugin-import": "^2.22.1",
-    "eslint-plugin-jest": "^24.1.5",
-    "eslint-plugin-prettier": "^3.3.1",
-    "jest": "^26.6.0",
-    "prettier": "^2.2.1",
-    "prettier-plugin-organize-imports": "^1.1.1",
-    "react": "^17.0.0",
-    "ts-jest": "^26.4.1",
-    "ts-loader": "^6.0.4",
-    "typescript": "^4.0.3",
-    "webpack": "^4.39.3",
-    "webpack-cli": "^3.3.7"
+    "husky": "^5.1.3",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
+    "size-limit": "^4.10.0",
+    "tsdx": "^0.14.1",
+    "tslib": "^2.1.0",
+    "typescript": "^4.2.3"
   },
-  "files": [
-    "lib",
-    "esm",
-    "umd"
-  ],
   "dependencies": {
     "is-promise": "^4.0.0"
   }
