--- a/package.json
+++ b/package.json
@@ -72,6 +72,7 @@
     "typescript": "^4.2.3"
   },
   "dependencies": {
-    "is-promise": "^4.0.0"
+    "is-promise": "^4.0.0",
+    "react-error-boundary": "^3.1.1"
   }
 }
